<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">WsprNet Viewer</string>
    <string name="version">version</string>
    <string name="app_descrip">Carrier message and data rates may apply.
        \u000aWsprNetViewer retrieves WSPR (weak-signal propagation report) real-time amateur radio signal
        propagation reports from wsprnet.org.
        \u000aWSPR page: Tapping on a report displays more information about it, along with a static world map
        identifying the transmitter and receiver locations.
        \u000aMap page: filters and map settings are set using the icon buttons at the bottom of the screen.
        \u000aNotes:
        \u000a  In the \'Filters\' settings, you can use the wildcards \'\u003f\' (any one character) and \'\u002a\' (any characters), or any letter (upper or lower case), number, or \'/\' (stroke).
        \u000a  For example, a TX callsign filter of d\u003f3\u002a displays only reports with a TX callsign starting with \'D\', followed by any character, then a \'3\', followed by any characters.
        \u000a  The WSPR filter settings are distinct from the maps filters.
        \u000a73 de Joe, AC8ES.</string>
    <string name="app_credits">Uses:\u000a icons8 icons8.com/license \u000a jsoup  jsoup.org \u000a map image http://en.wikipedia.org/wiki/Maidenhead_Locator_System \u000a Font Awesome http://fortawesome.github.io/Font-Awesome/</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Map Gridsquare</string>
    <string name="action_map_tx">Map Tx Gridsquare</string>
    <string name="action_map_rx">Map Rx Gridsquare</string>
    <string name="action_share">Share</string>
    <string name="action_debug" translatable="false">Debug only</string>
    <string name="action_refresh" translatable="false">Get WSPR data</string>
    <string name="action_dumpdb" translatable="false">Dump database</string>
    <string name="action_cleardb" translatable="false">Clear database</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_gridsquare_label">QTH gridsquare (or long-click on map)</string>
    <string name="pref_gridsquare_key" translatable="false">gridsquare</string>
    <string name="pref_gridsquare_default" translatable="false"></string>
    <string name="heading_from_qth">Heading from QTH</string>
    <string name="pref_last_notification">last_sync</string>
    <string name="band_open">Band is open!</string>
    <string name="format_notification">        WSPR: <xliff:g id="description">%1$s</xliff:g>         band: <xliff:g id="bandName">%2$s;</xliff:g>         SNR: <xliff:g id="snr">%3$s</xliff:g></string>
    <string name="pref_notifications_key" translatable="false">notifications_key</string>
    <string name="pref_notifications_label">WSPR Notifications</string>
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">WSPR Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">false</string>
    <string name="pref_notify_key_tx_callsign" translatable="false">pref_notify_key_tx_callsign</string>
    <string name="pref_notify_key_rx_callsign" translatable="false">pref_notify_key_rx_callsign</string>
    <string name="pref_notify_key_tx_gridsquare" translatable="false">pref_notify_key_tx_gridsquare</string>
    <string name="pref_notify_key_rx_gridsquare" translatable="false">pref_notify_key_rx_gridsquare</string>
    <string name="pref_notify_key_min_tx_rx_distance" translatable="false">pref_notify_key_min_tx_rx_distance</string>
    <string name="pref_notify_label_min_tx_rx_distance">min TX-RX distance (km)</string>
    <string name="pref_notify_band_label">Frequency band</string>
    <string name="pref_notify_band_key">notify_band</string>
    <string name="pref_map_band_key_">pref_map_band_</string>
    <string name="pref_notify_min_snr_label">Minimum SNR dBm</string>
    <string name="pref_notify_min_snr_key">min_snr</string>
    <string name="pref_min_snr_value_m30" translatable="false">-30</string>
    <string name="pref_min_snr_value_m20" translatable="false">-20</string>
    <string name="pref_min_snr_value_m10" translatable="false">-10</string>
    <string name="pref_min_snr_value_p0" translatable="false">0</string>
    <string name="pref_min_snr_value_p10" translatable="false">10</string>
    <string name="pref_min_snr_value_p20" translatable="false">20</string>
    <string name="pref_min_snr_value_p30" translatable="false">30</string>
    <string name="pref_band_label_any" translatable="true">any</string>
    <string name="pref_band_label_LF" translatable="false">LF</string>
    <string name="pref_band_label_MF" translatable="false">MF</string>
    <string name="pref_band_label_160m" translatable="false">160m</string>
    <string name="pref_band_label_80m" translatable="false">80m</string>
    <string name="pref_band_label_60m" translatable="false">60m</string>
    <string name="pref_band_label_40m" translatable="false">40m</string>
    <string name="pref_band_label_30m" translatable="false">30m</string>
    <string name="pref_band_label_20m" translatable="false">20m</string>
    <string name="pref_band_label_17m" translatable="false">17m</string>
    <string name="pref_band_label_15m" translatable="false">15m</string>
    <string name="pref_band_label_12m" translatable="false">12m</string>
    <string name="pref_band_label_10m" translatable="false">10m</string>
    <string name="pref_band_label_6m" translatable="false">6m</string>
    <string name="pref_band_label_4m" translatable="false">4m</string>
    <string name="pref_band_label_2m" translatable="false">2m</string>
    <string name="pref_band_label_70cm" translatable="false">70cm</string>
    <string name="pref_band_label_23cm" translatable="false">23cm</string>
    <string name="pref_band_value_any" translatable="false">0</string>
    <string name="pref_band_value_LF" translatable="false">0.05</string>
    <string name="pref_band_value_MF" translatable="false">0.5</string>
    <string name="pref_band_value_160m" translatable="false">1.85</string>
    <string name="pref_band_value_80m" translatable="false">3.7</string>
    <string name="pref_band_value_60m" translatable="false">5.35</string>
    <string name="pref_band_value_40m" translatable="false">7.125</string>
    <string name="pref_band_value_30m" translatable="false">10.125</string>
    <string name="string_select_all">All</string>
    <string name="string_press_done_on_keyboard">long-click \'done\' key, then \u21b0 </string>
    <string name="pref_filters_label">Filters</string>
    <string name="pref_filters_map_label">Map Filters</string>
    <string name="pref_filters_wavelength_label">\u03bb</string>
    <string name="pref_filter_enable_label">Filter</string>
    <string name="pref_filters_wildcards">wildcards: \?*</string>
    <string name="pref_filter_label_match_all">Match all</string>
    <string name="pref_filter_label_tx_callsign">TX callsign</string>
    <string name="pref_filter_label_rx_callsign">RX callsign</string>
    <string name="pref_filter_label_tx_gridsquare">TX gridsquare</string>
    <string name="pref_filter_label_rx_gridsquare">RX gridsquare</string>
    <string name="pref_filter_summary_tx_callsign">filter on this TX callsign</string>
    <string name="pref_filter_summary_rx_callsign">filter on this RX callsign</string>
    <string name="pref_filters_key" translatable="false">filters_key</string>
    <string name="pref_filter_key_match_all">pref_filter_key_match_all</string>
    <string name="pref_filter_map_enable_key" translatable="false">enable_filter_map_key</string>
    <string name="pref_filter_map_key_match_all">pref_filter_map_key_match_all</string>
    <string name="pref_filter_map_key_tx_callsign" translatable="false">pref_filter_map_key_tx_callsign</string>
    <string name="pref_filter_map_key_rx_callsign" translatable="false">pref_filter_map_key_rx_callsign</string>
    <string name="pref_filter_map_key_tx_gridsquare" translatable="false">pref_filter_map_key_tx_gridsquare</string>
    <string name="pref_filter_map_key_rx_gridsquare" translatable="false">pref_filter_map_key_rx_gridsquare</string>
    <string name="pref_filter_enable_true">Enabled</string>
    <string name="pref_filter_enable_false">Not Enabled</string>
    <string name="pref_filter_enable_default" translatable="false">false</string>
    <string name="pref_filter_match_all_true">match all</string>
    <string name="pref_filter_match_all_false">match any</string>
    <string name="pref_filter_match_all_default" translatable="false">false</string>
    <string name="pref_maps_settings_key_map_type_heat" translatable="false">pref_maps_settings_key_map_type_heat</string>
    <string name="pref_maps_settings_key_map_type_great_circle" translatable="false">pref_maps_settings_key_map_type_great_circle</string>
    <string name="propagation_maps_settings_label_intensity">Intensity</string>
    <string name="pref_maps_settings_label_map_intensity_snr">RX SNR</string>
    <string name="pref_maps_settings_key_map_intensity_snr" translatable="false">pref_maps_settings_key_map_intensity_snr</string>
    <string name="pref_maps_settings_label_map_intensity_snr_minus_tx_power">RX SNR - TX dBm</string>
    <string name="pref_maps_settings_key_map_intensity_snr_minus_tx_power" translatable="false">pref_maps_settings_key_map_intensity_snr_minus_tx_power</string>
    <string name="propagation_maps_settings_label_map_type">Map type</string>
    <string name="propagation_maps_settings_label_heat">heat map</string>
    <string name="propagation_maps_settings_label_great_circle">great circle map</string>
    <string name="pref_maps_settings_markers_tx_key" translatable="false">pref_maps_settings_markers_tx</string>
    <string name="pref_maps_settings_markers_rx_key" translatable="false">pref_maps_settings_markers_rx</string>
    <string name="pref_maps_settings_markers_label" >Markers</string>
    <string name="string_tx">TX</string>
    <string name="string_rx">RX</string>
    <string name="pref_maps_settings_label_max_items">Max items:</string>
    <string name="pref_maps_settings_key_max_items_all">pref_maps_settings_key_max_items_all</string>
    <string name="pref_maps_settings_key_max_items_50">pref_maps_settings_key_max_items_50</string>
    <string name="pref_maps_settings_key_max_items_250">pref_maps_settings_key_max_items_250</string>
    <string name="pref_maps_settings_label_max_minutes_ago">Max minutes ago:</string>
    <string name="pref_maps_settings_key_max_minutes_ago_all">pref_maps_settings_key_max_minutes_ago_all</string>
    <string name="pref_maps_settings_key_max_minutes_ago_short">pref_maps_settings_key_max_minutes_ago_short</string>
    <string name="pref_maps_settings_key_max_minutes_ago_long">pref_maps_settings_key_max_minutes_ago_long</string>
    <string name="pref_maps_settings_default_max_minutes_ago_short">15</string>
    <string name="pref_maps_settings_default_max_minutes_ago_long">60</string>
    <string name="pref_units_label">Units</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_recent_key" translatable="false">recent</string>
    <string name="pref_recent_label">Discard data after</string>
    <string name="pref_recent_1hour" translatable="false">3600</string>
    <string name="pref_update_interval_key" translatable="false">interval</string>
    <string name="pref_update_interval_label">Update interval</string>
</resources>