<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.glandorf1.joe.wsprnetviewer.app.PropagationMapsSettingsDialog">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/propagation_maps_settings_label_map_type"
            />
        <RadioGroup
            android:id="@+id/propagation_maps_settings_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/propagation_maps_settings_type_great_circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/propagation_maps_settings_label_great_circle"
                android:tag="@string/pref_maps_settings_key_map_type_great_circle"
                android:checked="true"
                />
            <RadioButton
                android:id="@+id/propagation_maps_settings_type_heat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/propagation_maps_settings_label_heat"
                android:tag="@string/pref_maps_settings_key_map_type_heat"
                android:checked="false"
                />
        </RadioGroup>
        <View style="@style/Divider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pref_maps_settings_markers_label"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/propagation_maps_settings_markers_tx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:paddingTop="4dip"
                android:tag="@string/pref_maps_settings_markers_tx_key"
                android:text="@string/string_tx"
                android:textAppearance="?android:textAppearanceMedium" />
            <CheckBox
                android:id="@+id/propagation_maps_settings_markers_rx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:paddingTop="4dip"
                android:tag="@string/pref_maps_settings_markers_rx_key"
                android:text="@string/string_rx"
                android:textAppearance="?android:textAppearanceMedium" />
        </LinearLayout>

        <View style="@style/Divider" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/propagation_maps_settings_label_intensity"
            />
        <RadioGroup
            android:id="@+id/pref_maps_settings_map_intensity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/pref_maps_settings_map_intensity_snr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pref_maps_settings_label_map_intensity_snr"
                android:tag="@string/pref_maps_settings_key_map_intensity_snr"
                android:checked="true"
                />
            <RadioButton
                android:id="@+id/pref_maps_settings_intensity_snr_minus_tx_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pref_maps_settings_label_map_intensity_snr_minus_tx_power"
                android:tag="@string/pref_maps_settings_key_map_intensity_snr_minus_tx_power"
                android:checked="false"
                />
        </RadioGroup>
        <View style="@style/Divider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pref_maps_settings_label_max_items"
            />
        <RadioGroup
            android:id="@+id/propagation_maps_settings_max_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"  >
            <RadioButton
                android:id="@+id/propagation_maps_settings_max_items_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_select_all"
                android:tag="@string/pref_maps_settings_key_max_items_all"
                android:checked="false"
                />
            <RadioButton
                android:id="@+id/propagation_maps_settings_max_items_250"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="250"
                android:tag="@string/pref_maps_settings_key_max_items_250"
                android:checked="false"
                />
            <RadioButton
                android:id="@+id/propagation_maps_settings_max_items_50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="50"
                android:tag="@string/pref_maps_settings_key_max_items_50"
                android:checked="false"
                />
        </RadioGroup>

        <View style="@style/Divider" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pref_maps_settings_label_max_minutes_ago"
            />
        <RadioGroup
            android:id="@+id/propagation_maps_settings_max_minutes_ago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"  >
            <RadioButton
                android:id="@+id/propagation_maps_settings_max_minutes_ago_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_select_all"
                android:tag="@string/pref_maps_settings_key_max_minutes_ago_all"
                android:checked="false"
                />
            <RadioButton
                android:id="@+id/propagation_maps_settings_max_minutes_ago_long"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pref_maps_settings_default_max_minutes_ago_long"
                android:tag="@string/pref_maps_settings_key_max_minutes_ago_long"
                android:checked="false"
                />
            <RadioButton
                android:id="@+id/propagation_maps_settings_max_minutes_ago_short"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pref_maps_settings_default_max_minutes_ago_short"
                android:tag="@string/pref_maps_settings_key_max_minutes_ago_short"
                android:checked="false"
                />
        </RadioGroup>

    </LinearLayout>
</ScrollView>

