<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.glandorf1.joe.wsprnetviewer.app.MainActivity" >
    <item android:id="@+id/action_settings_wspr_wavelength"
        android:title="@string/pref_filters_wavelength_label"
        android:orderInCategory="90"
        android:enabled="false"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_settings_wspr_filters"
        android:title="@string/pref_filters_label"
        android:icon="@drawable/ic_fa_filter"
        android:orderInCategory="91"
        android:enabled="false"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="99"
        app:showAsAction="never" />
    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
